--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "body-parser": "^1.20.2",
+    "class-validator": "^0.14.1",
     "husky": "^9.0.11",
+    "joi": "^17.12.3",
+    "nestjs-pino": "^4.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
   },
