--- a/package.json
+++ b/package.json
@@ -21,14 +21,24 @@
     "prepare": "is-ci || husky"
   },
   "dependencies": {
+    "@golevelup/nestjs-webhooks": "^0.2.18",
+    "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@supercharge/request-ip": "^1.2.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "body-parser": "^1.20.2",
+    "cache-manager": "^5.5.0",
+    "cache-manager-ioredis-yet": "^2.0.2",
+    "chalk": "^4.1.2",
+    "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "helper-fns": "^2.7.0",
     "husky": "^9.0.11",
     "joi": "^17.12.3",
+    "nestjs-i18n": "^10.4.5",
     "nestjs-pino": "^4.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
@@ -36,15 +46,17 @@
   "devDependencies": {
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
+    "@golevelup/ts-jest": "^0.4.0",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.3.1",
+    "@types/node": "^20.12.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.42.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
