--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gigcodes-nest",
   "version": "0.0.1",
   "description": "",
-  "author": "",
+  "author": "Karthick K<karthick@gigcodes.com>",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -35,6 +35,8 @@
     "chalk": "^4.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "compression": "^1.7.4",
+    "helmet": "^7.1.0",
     "helper-fns": "^2.7.0",
     "husky": "^9.0.11",
     "joi": "^17.12.3",
@@ -50,6 +52,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/compression": "^1.7.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.12.4",
