--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "prepare": "is-ci || husky"
   },
+  "engines": {
+    "node": ">=20.12.0"
+  },
   "dependencies": {
     "@golevelup/nestjs-webhooks": "^0.2.18",
     "@nestjs/cache-manager": "^2.2.2",
@@ -27,6 +30,7 @@
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/throttler": "^5.1.2",
     "@supercharge/request-ip": "^1.2.0",
     "@total-typescript/ts-reset": "^0.5.1",
     "body-parser": "^1.20.2",
@@ -42,7 +46,8 @@
     "joi": "^17.12.3",
     "nestjs-i18n": "^10.4.5",
     "nestjs-pino": "^4.0.0",
-    "reflect-metadata": "^0.2.0",
+    "nestjs-throttler-storage-redis": "^0.4.4",
+    "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
