--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -7,6 +7,7 @@
     "**/*spec.ts",
     "./src/common/database/factories/*",
     "./src/common/database/seeders/*",
+    "./src/common/database/migrations/*",
     "./src/_mocks_/*",
     "eslint.config.js"
   ]
