--- a/tsconfig.json
+++ b/tsconfig.json
@@ -72,7 +72,7 @@
   "include": [
     "test/**/*",
     "src/**/*",
-    "eslint.config.js"
+    "eslint.config.js",
   ],
 
   "typeRoots": ["./src/common/@types/typings"]
