--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
     "start:prod": "node dist/main",
     "start:repl": "MIKRO_ORM_ALLOW_GLOBAL_CONTEXT=true nest start --watch --entryFile repl",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
+    "test": "jest --verbose",
     "orm": "npx mikro-orm",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand --forceExit",
     "prepare": "is-ci || husky"
   },
   "engines": {
@@ -138,5 +138,10 @@
       "./src/common/database/mikro-orm-cli.config.ts",
       "./dist/common/database/mikro-orm-cli.config.js"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
