fix: made all the test cases to work

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
 
     /* ModuleResolution: */
 
-    "module": "CommonJS",
+    "module": "commonjs",
     "moduleResolution": "node",
 
     /* Output: */
