--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "node": ">=20.12.0"
   },
   "dependencies": {
+    "@aws-sdk/client-ses": "^3.549.0",
     "@casl/ability": "^6.7.1",
     "@golevelup/nestjs-webhooks": "^0.2.18",
+    "@ladjs/consolidate": "^1.0.3",
     "@mikro-orm/core": "^6.1.12",
     "@mikro-orm/migrations": "^6.1.12",
     "@mikro-orm/mysql": "^6.1.12",
@@ -48,6 +50,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/swagger": "^7.3.1",
     "@nestjs/throttler": "^5.1.2",
+    "@paralleldrive/cuid2": "^2.2.2",
     "@supercharge/request-ip": "^1.2.0",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/passport": "^1.0.16",
@@ -67,9 +70,13 @@
     "ioredis": "^5.3.2",
     "isomorphic-dompurify": "^2.6.0",
     "joi": "^17.12.3",
+    "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.4.5",
     "nestjs-pino": "^4.0.0",
     "nestjs-throttler-storage-redis": "^0.4.4",
+    "nodemailer": "^6.9.13",
+    "poolifier": "^3.1.29",
+    "preview-email": "^3.0.19",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "unprofane": "^1.0.6"
@@ -91,7 +98,10 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.12.4",
+    "@types/nodemailer": "^6.4.14",
+    "@types/preview-email": "^3.0.4",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
