--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/cqrs": "^10.2.7",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
@@ -56,6 +57,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^4.0.1",
     "argon2": "^0.40.1",
+    "aws-sdk": "^2.1603.0",
     "body-parser": "^1.20.2",
     "cache-manager": "^5.5.0",
     "cache-manager-ioredis-yet": "^2.0.2",
@@ -70,6 +72,7 @@
     "ioredis": "^5.3.2",
     "isomorphic-dompurify": "^2.6.0",
     "joi": "^17.12.3",
+    "mime-types": "^2.1.35",
     "multer": "^1.4.5-lts.1",
     "nestjs-i18n": "^10.4.5",
     "nestjs-pino": "^4.0.0",
@@ -79,7 +82,8 @@
     "preview-email": "^3.0.19",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "unprofane": "^1.0.6"
+    "unprofane": "^1.0.6",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^2.12.1",
@@ -98,11 +102,13 @@
     "@types/compression": "^1.7.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.4",
     "@types/nodemailer": "^6.4.14",
     "@types/preview-email": "^3.0.4",
     "@types/supertest": "^6.0.0",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "cross-env": "^7.0.3",
