feat: env update

--- a/.env.sample
+++ b/.env.sample
@@ -24,12 +24,12 @@ ENC_KEY=3059017d6f19644eaf12f89618336d68
 # jwt
 JWT_ACCESS_EXPIRY=30
 JWT_REFRESH_EXPIRY=40
-JWT_SECRET=3059017d6f19644eaf12f89618336d68
+JWT_SECRET=
 
 
 # mail
 MAIL_HOST=smtp.sendgrid.net
-MAIL_PASSWORD=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
+MAIL_PASSWORD=
 MAIL_USERNAME=apikey
 MAIL_PORT=465
 MAIL_SERVER=SMTP
