feat: env update

--- a/.env.sample
+++ b/.env.sample
@@ -30,7 +30,7 @@ JWT_SECRET=
 # mail
 MAIL_HOST=smtp.sendgrid.net
 MAIL_PASSWORD=
-MAIL_USERNAME=apikey
+MAIL_USERNAME=
 MAIL_PORT=465
 MAIL_SERVER=SMTP
 MAIL_PREVIEW_EMAIL=false
