feat: minor fixes added

--- a/.env.sample
+++ b/.env.sample
@@ -48,3 +48,13 @@ REDIS_URI=redis://localhost:6379
 #throttle
 THROTTLE_LIMIT=10
 THROTTLE_TTL=30
+
+
+#AWS
+FILE_DRIVER=s3
+#currenly only s3 is added
+
+ACCESS_KEY_ID=
+SECRET_ACCESS_KEY=
+AWS_DEFAULT_S3_BUCKET=
+AWS_S3_REGION=ap-south-1
