--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "nestjs-pino": "^4.0.0",
     "nestjs-throttler-storage-redis": "^0.4.4",
     "nodemailer": "^6.9.13",
+    "passport-jwt": "^4.0.1",
     "poolifier": "^3.1.29",
     "preview-email": "^3.0.19",
     "reflect-metadata": "^0.2.2",
