--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node": ">=20.12.0"
   },
   "dependencies": {
+    "@apollo/server": "^4.10.4",
     "@aws-sdk/client-ses": "^3.549.0",
     "@casl/ability": "^6.7.1",
     "@golevelup/nestjs-webhooks": "^0.2.18",
@@ -41,11 +42,13 @@
     "@mikro-orm/nestjs": "^5.2.3",
     "@mikro-orm/reflection": "^6.1.12",
     "@mikro-orm/sql-highlighter": "^1.0.1",
+    "@nestjs/apollo": "^12.1.0",
     "@nestjs/cache-manager": "^2.2.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/cqrs": "^10.2.7",
+    "@nestjs/graphql": "^12.1.1",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
@@ -66,6 +69,7 @@
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "date-fns-tz": "^2.0.1",
+    "graphql": "^16.8.1",
     "helmet": "^7.1.0",
     "helper-fns": "^2.7.0",
     "husky": "^9.0.11",
@@ -79,6 +83,7 @@
     "nestjs-throttler-storage-redis": "^0.4.4",
     "nodemailer": "^6.9.13",
     "passport-jwt": "^4.0.1",
+    "pluralize": "^8.0.0",
     "poolifier": "^3.1.29",
     "preview-email": "^3.0.19",
     "reflect-metadata": "^0.2.2",
@@ -107,6 +112,7 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.12.4",
     "@types/nodemailer": "^6.4.14",
+    "@types/pluralize": "^0.0.33",
     "@types/preview-email": "^3.0.4",
     "@types/supertest": "^6.0.0",
     "@types/uuid": "^9.0.8",
